Fix phone number is visible on menu icon hover

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -14,6 +14,20 @@
 
   &--phone {
     background-image: url(../images/icons/icon-phone.png);
+    text-decoration: none;
+    color: inherit;
+
+    &:hover::before {
+      content: '+1 234 5555-55-55';
+      display: block;
+      width: max-content;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 32px;
+      letter-spacing: 2px;
+      position: relative;
+      right: 150px;
+    }
   }
 
   &--menu {
