--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -32,16 +32,5 @@
     @include tablet {
       gap: 32px;
     }
-
-    &--phone:hover::before {
-      margin-right: -24px;
-      content: '+1 234 5555-55-55';
-      align-self: center;
-      font-weight: 700;
-      font-family: $font-family;
-      font-size: 12px;
-      line-height: 16px;
-      letter-spacing: 2px;
-    }
   }
 }
